# maddog-token

./: .gitignore  Anchor.toml  Cargo.toml  metadata.json  metadata.ts  package-lock.json  package.json
programs/maddog2/: Cargo.toml
programs/maddog2/src/: lib.rs
solana-metadata-update/: get_metadata.js  meta.ts  package-lock.json  package.json  publish_metadata.js  update_metadata.js
tests/: maddog2.ts
